feat(backend): implements upload and upload batch
